notes from sept. 5 2019 class

--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
+<!DOCTYPE html>
+<!-- September 5, 2019 Class Monday Schedule
+    Always include:
+    <html lang="en">
+        <title> Quetourah's Page </title>
+        <meta charset="UTF-8"> 
+-->
+<html lang="en">
 <html>
     <head>
         <title> Quetourah's Page </title>
+        <meta charset="UTF-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
     </head>
     <body>
+        <h1>should only have one h1 header in a webpage</h1>
         <p>
             Webpage
+            <strong>ipsum dolor sit amet consectetur adipisicing elit. Incidunt exercitationem doloremque ipsum provident, a qui quasi quisquam modi blanditiis aut tempore, quia ut alias tempora voluptate quae porro. Facere, ad!</strong> <!--or <b> for bold-->
         </p>
+        <h2>List of animals</h2>
+        <ul>
+            <li>dog</li>
+            <li>cat</li>
+            <li>flamingo</li>
+        </ul>
+        <!-- stateless connection: connection isn't continuous. The connection closes once the response is sent.-->
+        <!-- DOM: is in the memory of the browser; it's the conception of the webpage;-->
+        <dl>
+                <dt>Coffee</dt>
+                <dd>Black hot drink</dd>
+                <dt>Milk</dt>
+                <dd>White cold drink</dd>
+        </dl>
     </body>
 </html>
