--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>should only have one h1 header in a webpage</h1>
